# balcony-solar-forecast

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  hacs.json  pyproject.toml
.claude/: launch.json
.github/workflows/: release.yml  validate.yml
custom_components/balcony_solar_forecast/: __init__.py  _actuals.py  _dashboard.py  _frontend.py  _glue_util.py  _nightly.py  _scoreboard_glue.py  _services.py  _site_validation.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  date.py  diagnostics.py  energy.py  fetcher.py  icons.json  manifest.json  recorder.py  select.py  sensor.py  services.yaml  store.py
custom_components/balcony_solar_forecast/core/: __init__.py  bias.py  clearsky.py  (+12 more)
dashboards/: balcony_solar_forecast.yaml  shade_profile_apexcharts.yaml
docs/: BACKFILL.md  DASHBOARD.md  SPEC.md
scripts/: backfill.py  setup-env.ps1  setup-env.sh  setup_env.py
tests/: conftest.py  test_config_flow_options_switches.py  test_config_flow_options_v04.py  test_config_flow_reconfigure.py  test_config_flow_schema.py  test_config_flow_user.py  test_config_flow_validation.py  test_coordinator_degradation.py  test_coordinator_ensemble.py  test_coordinator_learning.py  test_coordinator_scoreboard.py  test_coordinator_store_wiring.py  test_coordinator_weather_cache.py  test_diagnostics_learning.py  test_drift_attribution.py  test_fetcher_ensemble.py  test_fetcher_retry.py  test_fetcher_shapes.py  test_frontend_harness.py  test_frontend_resource.py  test_install_dashboard.py  test_nightly_orchestration.py  test_platforms.py  test_platforms_learning.py  test_platforms_scoreboard.py  test_platforms_shadeprofile.py  test_services_learning.py  test_store_v2.py  test_store_v3_migration.py  test_training_idempotence_rollback.py
tests/core/: conftest.py  reference_vectors.json  test_backfill_math.py  test_bias.py  test_clearsky.py  test_dashboard_yaml.py  test_electrical.py  test_engine.py  test_engine_ac.py  test_engine_clamp.py  test_engine_inverter_cal.py  test_engine_learning.py  test_engine_quantiles.py  test_engine_split_equivalence.py  test_ensembleband.py  test_golden.py  test_horizon.py  test_horizon_svf_cache.py  test_inverter_cal.py  test_measured_energy_entity.py  test_quantiles.py  test_scoreboard.py  test_shade_groups.py  test_shademap.py  test_shadeprofile.py  test_solpos.py  test_transpose.py
tests/fixtures/: ensemble_icon_seamless.json
tests/harness/: power_card_harness.mjs
(+4 files in other folders)
